[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finrag"
version = "1.0.0"
description = "Multi-Tenant Financial Document Intelligence System with RAG"
requires-python = ">=3.12"

dependencies = [
    # API
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "python-multipart==0.0.9",
    "httptools==0.6.1",
    "uvloop==0.19.0",

    # Database
    "sqlalchemy[asyncio]==2.0.31",
    "asyncpg==0.29.0",
    "alembic==1.13.2",
    "pgvector==0.3.2",

    # Redis
    "redis[asyncio]==5.0.7",

    # LLM
    "openai==1.40.0",
    "tiktoken==0.7.0",

    # PDF
    "pdfplumber==0.11.2",

    # Auth
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",

    # Validation
    "pydantic==2.7.4",
    "pydantic-settings==2.3.4",
    "email-validator==2.2.0",

    # Logging
    "structlog==24.1.0",

    # Utils
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "factory-boy==3.3.0",
    "ruff==0.5.0",
    "mypy==1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP", "S", "B"]
ignore = ["S101", "S603"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"
